fixed: icon cut off on some platforms
git-svn-id: https://code.downthemall.net/repos/trunk@460 43940e1f-b481-bb45-89eb-5c6a4bf3d40a

--- a/chrome/content/common/bindings.css
+++ b/chrome/content/common/bindings.css
@@ -22,11 +22,12 @@
 	border:0px; margin: 0px; padding: 0px;
 }
 .closer caption .caption-icon {
-	height: 9px;
-	width: 9px;
+	height: 10px;
+	width: 10px;
 	background: transparent url("chrome://dta/skin/common/twisty-clsd.png") no-repeat center center;
 	-moz-margin-start: 1px;
 	-moz-margin-end: 3px;
+	padding: 0;
 }
 .closer[closed="true"] caption .caption-icon {
 	background-image: url("chrome://dta/skin/common/twisty-open.png");
